--- a/src/view/src/styles.css
+++ b/src/view/src/styles.css
@@ -1,8 +1,22 @@
+html, body, #root {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
 html, body, #root, .container {
     background-color: var(--bs-gray-200);
-    min-height: 100vh;
     overflow: hidden;
 }
+
+.container {
+    flex-grow: 1;
+}
+
+.footer {
+    flex-grow: 0;
+}
+
 
 .btn-dice {
     background-image: url("dice-6.svg");
